--- a/waiter_portal/macos/Runner/Configs/AppInfo.xcconfig
+++ b/waiter_portal/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = waiter_portel
+PRODUCT_NAME = waiter_portal
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.waiterPortel
+PRODUCT_BUNDLE_IDENTIFIER = com.example.waiterPortal
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2026 com.example. All rights reserved.
