--- a/manager_portal/pubspec.yaml
+++ b/manager_portal/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_auth: ^5.7.0
   cloud_firestore: ^5.6.12
   get_it: ^9.2.0
+  collapsible_sidebar: ^2.0.7
+  sidebarx: ^0.17.2
 
 dev_dependencies:
   flutter_test:
